tests/specs/ecosystem/yossydev/vite_rehype_toc/0_1_6.test
yossydev/vite-rehype-toc/0.1.6
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { Root };
         ~~~~
    at file://<tmpdir>/src/types.ts:36:10

error: Type checking failed.

